--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,31 @@
-<ani-header></ani-header> <!-- *ngIf='userService.isAuthenticated'-->
+<cfs-header
+  [logo]="'candilogo_icon32x32.png'"
+  [leftLinks]="headerLeftLinks"
+  [middleButton]="middleButton"
+  [brand]="headerBrand"
+  (middleButtonClick)="openLocationChangeModel($event)">
+</cfs-header>
+
 <div class="container">
   <router-outlet></router-outlet>
 </div>
-<ani-footer></ani-footer>
+
+<cfs-footer
+  [year]="year"
+  [social]="social"
+  [brand]="brand"
+  [contact]="contact"
+  [message]="message"
+  [columnOneLinks]="columnOneLinks"
+  [columnTwoLinks]="columnTwoLinks">
+</cfs-footer>
+
 <agm-map [latitude]="coordinates && coordinates.latitude"
          [zoom]="16"
          [longitude]="coordinates && coordinates.longitude" (mapReady)="mapReady($event)">
-  <agm-marker [latitude]="coordinates && coordinates.latitude" [longitude]="coordinates && coordinates.longitude"></agm-marker>
+
+  <agm-marker
+    [latitude]="coordinates && coordinates.latitude"
+    [longitude]="coordinates && coordinates.longitude"></agm-marker>
 </agm-map>
+
