--- a/src/app/aniruddh/components/work-sample/work-sample.component.html
+++ b/src/app/aniruddh/components/work-sample/work-sample.component.html
@@ -48,6 +48,20 @@
 
   <div class="card">
     <div class="card-header">
+      <h5><a href="http://www.etouch.net/">eTouch Systems</a></h5>
+    </div>
+    <div class="card-body">
+      <div class="row d-flex justify-content-between">
+        <div class="col">
+          <h6><a href="https://cashproonline.bankofamerica.com/">Bank of America CashPro</a></h6>
+          <p>Manage your cash, payments and receipts, investments, foreign exchange, credit and trade with access choices that work best for you.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="card">
+    <div class="card-header">
       <h5><a href="https://cashproonline.bankofamerica.com/">Bank of America CashPro</a></h5>
     </div>
     <div class="card-body">
@@ -58,6 +72,21 @@
         </div>
         <div class="col">
           <img class="finra-udc" [src]="'/assets/boa-cashproonline.png'">
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="card">
+    <div class="card-header">
+      <h5><a href="http://www.google.com/">Google Atlas</a></h5>
+    </div>
+    <div class="card-body">
+      <div class="row d-flex justify-content-between">
+        <div class="col">
+          <h6><a href="https://cashproonline.bankofamerica.com/">Bank of America CashPro</a></h6>
+          <p>Manage your cash, payments and receipts, investments, foreign exchange, credit and trade with access choices that work best for you.</p>
         </div>
       </div>
     </div>
