--- a/src/app/aniruddh/components/work-sample/work-sample.component.html
+++ b/src/app/aniruddh/components/work-sample/work-sample.component.html
@@ -146,7 +146,7 @@
     <div class="card-body">
       <div class="row d-flex justify-content-between">
         <div class="col">
-          <h6><a href="https://cashproonline.bankofamerica.com/">Bank of America CashPro</a></h6>
+          <h6>Worked for Assurgent clients</h6>
           <p>Manage your cash, payments and receipts, investments, foreign exchange, credit and trade with access choices that work best for you.</p>
         </div>
       </div>
