--- a/src/app/aniruddh/components/work-sample/work-sample.component.html
+++ b/src/app/aniruddh/components/work-sample/work-sample.component.html
@@ -55,6 +55,11 @@
         <div class="col">
           <h6>eTouch System (Service base company)</h6>
           <p>I worked for 2 of there clients in there office and for very short period of time. </p>
+          <h6>Applications</h6>
+          <ul>
+            <li> SCM for RevGrp</li>
+            <li> Web application of Fameadict</li>
+          </ul>
         </div>
       </div>
     </div>
