--- a/source/src/app/aniruddh/components/home/home.component.html
+++ b/source/src/app/aniruddh/components/home/home.component.html
@@ -3,12 +3,6 @@
     <ani-summary></ani-summary>
   </div>
 
-  <p>
-    <strong></strong>
-  </p>
-  <p>
-    <strong></strong>
-  </p>
   <div>
     <p>
       <strong>WORK EXPERIENCE</strong>
@@ -213,615 +207,10 @@
   <p>
     Tools : Git, JIRA Issue Tracking Tool, BMC Remedy, HP QC, Star, etc.
   </p>
-  <div>
-    <p>
-      <strong>PROJECTS EXPERIENCE</strong>
-      <strong><u></u></strong>
-    </p>
-  </div>
-  <p>
-    <strong><u></u></strong>
-  </p>
-  <p>
-    <strong><u>Project #1</u></strong>
-  </p>
-  <p>
-    Project Name : Herd and Shepherd (http://finraos.github.io/herd/)
-  </p>
-  <p>
-    Role : Full stack developer
-  </p>
-  <p>
-    Client : FINRA
-  </p>
-  <p>
-    Application Server : AWS EC2
-  </p>
-  <p>
-    Duration <strong> </strong> : Januray 2017 to till date
-  </p>
-  <p>
-    Team : 15-20
-  </p>
-  <p>
-    Technology used <strong> </strong>: AngularJS, Angular 2/4, TypeScript,
-    SCSS, JavaScipt, Spring Boot.
-  </p>
-  <p>
-    Tools : Intellij, Visual Studio Code, etc.
-  </p>
-  <p>
-    Description: Working as a full stack developer in UI/UX using AngularJS,
-    Angular 2/4, TypeScript etc. In the back end side JAVA with Spring in
-    amazon AWS EC2 instance. Herd and Shepherd are data management and indexing
-    application for FINRA and open source to public. Other technologies used
-    are Spring bootKarma, Jasmine, Protractor.
-  </p>
-  <p>
-    <strong><u></u></strong>
-  </p>
-  <p>
-    <strong><u>Project #2</u></strong>
-  </p>
-  <p>
-    Project Name : Einstein 360 widgets (http://einstein.comcast.com)
-  </p>
-  <p>
-    Role : Architect and lead developer to create widgets
-  </p>
-  <p>
-    Client : Comcast
-  </p>
-  <p>
-    Application Server : Comcast Servers
-  </p>
-  <p>
-    Duration <strong> </strong> : July 2016 to January 2017
-  </p>
-  <p>
-    Team : 13
-  </p>
-  <p>
-    Technology used <strong> </strong>: Angular 2, TypeScript, SCSS, Angular 1,
-    JavaScipt, Spring Boot.
-  </p>
-  <p>
-    Tools : Intellij, Visual Studio Code, Sublime Text, SOAP UI, etc.
-  </p>
-  <p>
-    Description: Architect and developed widgets using both angular1 and
-    angular with spring boot as rest service provider for the Einstein 360
-    which is a customer service application for the Comcast
-    telecallers.Initially we started developing angular1 widgets and plugins,
-    when anguluar2 released we successfully created and deployed widgets and
-    plugins using angular2 as well. Other technologies used are Spring boot,
-    gradle, Gulp, Grunt, Systemjs, Karma, Jasmine, Protractor.
-  </p>
-  <p>
-    .
-  </p>
-  <p>
-    <strong><u></u></strong>
-  </p>
-  <p>
-    <strong><u>Project #3</u></strong>
-  </p>
-  <p>
-    Project Name : QuickBook Intuit (http://quickbook.intuit.com)
-  </p>
-  <p>
-    Role : Developer for marketing pages
-  </p>
-  <p>
-    Client : Intuit
-  </p>
-  <p>
-    Application Server : Intuit Servers
-  </p>
-  <p>
-    Duration <strong> </strong> : May 2016 to July 2016
-  </p>
-  <p>
-    Team : 20+
-  </p>
-  <p>
-    Technology used <strong> </strong>: OO JavaScript, React, Spring MVC,
-    RESTFull, HTML 5, SCSS, etc.
-  </p>
-  <p>
-    Tools : Intellij, Visual Studio Code, Sublime Text, SOAP UI, etc.
-  </p>
-  <p>
-    Description: Designed and developed Designed and developed widgets and
-    plugins for quickbook.com application using JavaScript, react, intuit
-    internal JavaScript framework, java, etc. Also part of the team where we
-    separated few pieces from quickbook.com monolithic to widgets using intuit
-    internal JavaScript framework
-  </p>
-  <p>
-    <strong><u>Project #4</u></strong>
-  </p>
-  <p>
-    Project Name : Conns
-  </p>
-  <p>
-    Role : Architect, Design, Develop
-  </p>
-  <p>
-    Client : Conns
-  </p>
-  <p>
-    Application Server : Deployed in unis server and run through Jenkins maven
-    jobs
-  </p>
-  <p>
-    Duration <strong> </strong> : March 2016 to May 2016
-  </p>
-  <p>
-    Team : 3+
-  </p>
-  <p>
-    Technology used <strong> </strong>: JAVA, REST web services, SAML, Oauth2,
-    SOAP web services<strong> </strong>
-  </p>
-  <p>
-    Tools : Intellij, Visual Studio Code, Sublime Text, SOAP UI. etc
-  </p>
-  <p>
-    Description: Designed and developed application in java to make various
-    REST/SOAP web services call to end points like DocuSign connect and
-    eOriginal and do operation in the client side application. Created
-    application which will act like end poing and will be heated whenever any
-    transaction will be done in DocuSign and eOriginal server like signing a
-    document, creating an envelope, etc.
-  </p>
-  <p>
-    During the project development, implemented many security measures like
-    SAML authentication, Oauth2 authentication and token based authentication.
-  </p>
-  <p>
-    <strong><u></u></strong>
-  </p>
-  <p>
-    <strong><u>Project #5</u></strong>
-  </p>
-  <p>
-    Project Name : Cucumber framework
-  </p>
-  <p>
-    Role : Architect, Design, Develop, Team management
-  </p>
-  <p>
-    Client : Bank of America
-  </p>
-  <p>
-    Application Server : Deployed in unis server and run through Jenkins maven
-    jobs
-  </p>
-  <p>
-    Duration <strong> </strong> : March 2015 to January 2016
-  </p>
-  <p>
-    Team : 10-20
-  </p>
-  <p>
-    Technology used <strong> </strong>: Cucumber BDD, JAVA, Maven <strong> </strong>
-  </p>
-  <p>
-    Tools : Eclipse, Natural eclipse plugin, Jenkins, etc.
-  </p>
-  <p>
-    Description: Designed and developed a framework/tool to test all the
-    application under CashPro using Cucumber BDD, Jana, Gherkins. The tool will
-    test the behavior of the application rather unit test no matter in which
-    language it written. The best feature is any one including business analyst
-    can write test cases in plain English and everyone can be involved in very
-    early stage of SDLC.
-  </p>
-  <p>
-    <strong><u></u></strong>
-  </p>
-  <p>
-    <strong><u>Project #6</u></strong>
-  </p>
-  <p>
-    Project Name : CashPro Online
-  </p>
-  <p>
-    Role : Owner of Payment module
-  </p>
-  <p>
-    Client : Bank of America
-  </p>
-  <p>
-    Application Server : WebLogic in Bank of America cloud
-  </p>
-  <p>
-    Duration <strong> </strong> : November 2014 to January 2016
-  </p>
-  <p>
-    Team : 15-20
-  </p>
-  <p>
-    Technology used <strong> </strong>: JAVA, Spring MVC, JSF, Maven <strong> </strong>
-  </p>
-  <p>
-    Front Ends : AngularJS, jQuery, HTML 5, CSS 3
-  </p>
-  <p>
-    Database : Oracle 11g
-  </p>
-  <p>
-    Tools : Eclipse, Notepad ++ 5
-  </p>
-  <p>
-    Description: CashPro is used in many corporates as a banking solution to
-    handle all types of payment. I am working by taking ownership of the
-    payment module. Responsible to handle any type’s code changes, functional
-    improvement, UI improvement and code review. Working extensively with
-    business team and code development team to provide end to end solution.
-  </p>
-  <p>
-    <strong><u>Project #7</u></strong>
-  </p>
-  <p>
-    Project Name : Google Atlas / Dashboard
-  </p>
-  <p>
-    Role : Developer and Team lead
-  </p>
-  <p>
-    Client : Google Inc.
-  </p>
-  <p>
-    Application Server : Google cloud services
-  </p>
-  <p>
-    Duration <strong> </strong> : April 2014 to November 2014
-  </p>
-  <p>
-    Team : 15
-  </p>
-  <p>
-    Technology used <strong> </strong>: JAVA, JSP, Servlet, Google datastore, <strong> </strong>
-  </p>
-  <p>
-    Front Ends : AngularJS, jQuery, HTML 5, CSS 3
-  </p>
-  <p>
-    Database : Google Datastore
-  </p>
-  <p>
-    Tools : Eclipse
-  </p>
-  <p>
-    Description: Worked in tools used to put addresses, roads, builds, etc.
-    into the Google map. It was an existing project when I joined the team. I
-    learned new google technology and contributed to the project. As a senior
-    developer, I worked in many modules and handled the team. I learned and
-    worked technologies like Google App Engine. App engine Datastore,
-    AngularJS, etc. <strong><u></u></strong>
-  </p>
-  <p>
-    <strong><u></u></strong>
-  </p>
-  <p>
-    <strong><u>Project #8</u></strong>
-  </p>
-  <p>
-    Project Name : ARCS (Associate Recognition and Compensation Statement)
-  </p>
-  <p>
-    Role : Developer and Team lead
-  </p>
-  <p>
-    Client : NCR Corporation
-  </p>
-  <p>
-    Application Server : Apache Tomcat 6.5
-  </p>
-  <p>
-    Duration <strong> </strong> : June 2011 to April 2014
-  </p>
-  <p>
-    Team : 6
-  </p>
-  <p>
-    Technology used <strong> </strong>: JAVA, JSP, Servlet, PLSQL, Shell Script <strong> </strong>
-  </p>
-  <p>
-    Mobile Application : jQuery Mobile, jQuery, Android, HTML 5, CSS 3
-  </p>
-  <p>
-    Database : Oracle 10g (Upgraded to 11g)
-  </p>
-  <p>
-    Tools : Eclipse Juno, SQL Navigator 5.5/6.5
-  </p>
-  <p>
-    Description: ARCS project handles sales associate and their bonus in NCR
-    Corporation. I joined the team as a Senior Software Engineer and worked in
-    the entire application. My role and responsibility was to take care of the
-    application, interacting with the business users, handling the team and
-    mentoring juniors and interns. During my tenure, I developed application in
-    JAVA/J2EE, Oracle PL/SQL, JavaScript, jQuery, HTML%. CSS3. In addition to
-    that I designed a Mobile Application from scratch using Phone GAP, jQuery
-    Mobile, HTML 5, CSS 3 and Web Services.
-  </p>
-  <p>
-    <strong><u>Project #9</u></strong>
-  </p>
-  <p>
-    Project Name : NCR Intranet Portal (https://intranet.ncr.com/index.php)
-  </p>
-  <p>
-    Organization : NCR Corporation
-  </p>
-  <p>
-    Team : 12
-  </p>
-  <p>
-    Application Server : XAMPP, Apache Web Server
-  </p>
-  <p>
-    Duration : September 2010 to June 2011
-  </p>
-  <p>
-    Technology used :<strong> </strong>JAVA/J2EE<strong>, </strong>MySQL,
-    jQuery, HTML, CSS, PHP, Joomla
-  </p>
-  <p>
-    Description:<strong> </strong>NCR intranet portal is an application which
-    is designed and developed for NCR internal usages. The application is
-    widely used by its employee, customers and venders. In intranet, NCR
-    employee and customers can see many information regarding company, its
-    product, customers, employee, etc. as per the permission provided to
-    individual users. It facilitates employees to easily communicate with each
-    other and improve the productivity of the company. Recently we added the
-    company’s HR information to the portal as well. <strong><u></u></strong>
-  </p>
-  <p>
-    <strong><u></u></strong>
-  </p>
-  <p>
-    <strong><u>Project #10</u></strong>
-  </p>
-  <p>
-    Project Name : FAME Addict
-  </p>
-  <p>
-    Client : FAME Addict (U.S.A.)
-  </p>
-  <p>
-    Application Server : XAMPP
-  </p>
-  <p>
-    Organization : smartData enterprises (India) Ltd.
-  </p>
-  <p>
-    Duration <strong> </strong> : June 2010 to September 2010
-  </p>
-  <p>
-    Technology used <strong> </strong>: PHP, AJAX, MySQL, Joomla
-  </p>
-  <p>
-    Description<strong>: </strong>The FAME Addict is a place for media people
-    where they can show of their profile to media industry and communicate with
-    other media people and industry. This is also a social media website like
-    Orkut/Facebook, where users can contact and send message to friend or added
-    users in the site. It is a utility designed for the users to have access
-    the secured users database and sending message to them. It has an admin
-    module where admin can extract reports, verify users profile and manage
-    services, etc.
-  </p>
-  <p>
-    <strong><u>Project #11</u></strong>
-  </p>
-  <p>
-    Project Name : RevGrp/scmcrm (https://scm.revgrp.com/)
-  </p>
-  <p>
-    Client : Révolution Group (www.revgrp.com)
-  </p>
-  <p>
-    Application Server : XAMPP
-  </p>
-  <p>
-    Organization : smartData enterprises (India) Ltd.
-  </p>
-  <p>
-    Duration <strong> </strong> : December 2009 to June 2010
-  </p>
-  <p>
-    Team : 4 developers 1 QA
-  </p>
-  <p>
-    Technology used <strong> : </strong>PHP, MySQL, jQuery, Fusion Chart
-  </p>
-  <p>
-    Framework : cakePHP 1.2
-  </p>
-  <p>
-    Database : MySQL 1.5
-  </p>
-  <p>
-    Description<strong>: </strong>The project REVGRP is a SCM and CRM system
-    which is used to maintain the customers, vendors and employees of the
-    company. The Project is specially designed for the company’s various
-    departments situated in various countries (USA, China and Hong Kong), their
-    communications and shipments of goods from one office to another office and
-    to customers as well. The major modules are Administration, Account, User
-    management, Customer management, Vendors management, Orders (VPO/CPO), Mail
-    System etc. Rolls are specified to users (like employee, customer and
-    vendor).
-  </p>
-  <p>
-    <strong><u></u></strong>
-  </p>
-  <p>
-    <strong><u></u></strong>
-  </p>
-  <p>
-    <strong><u>Project #12</u></strong>
-  </p>
-  <p>
-    Project Name : Authentic Global Account (AGA)
-  </p>
-  <p>
-    Client : Authentic Technology (India) Pvt. Ltd.
-  </p>
-  <p>
-    Application Server : Apache Tomcat 5.5
-  </p>
-  <p>
-    Organization : Authentic Technology (India) Pvt. Ltd.
-  </p>
-  <p>
-    Duration <strong> </strong> : March 2009 to December 2009
-  </p>
-  <p>
-    Technology used <strong> </strong>: JAVA, Struts 1.2, jQuery
-  </p>
-  <p>
-    Database : MySQL
-  </p>
-  <p>
-    Description<strong>: </strong>The project ‘AGA’ is a HRM which is used to
-    maintain customers of the company and its employee. The project is
-    specially designed for the company’s internal employee and to deal with
-    various departments. The Modules are administration, payroll, account, user
-    management, Leave Management and reports. It is also integrated to employee
-    database. It provides information about all employees to HR and other
-    Managers.<strong><u></u></strong>
-  </p>
-  <p>
-    <strong><u></u></strong>
-  </p>
-  <p>
-    <strong><u>Project #13</u></strong>
-  </p>
-  <p>
-    Project Name : College Management System
-  </p>
-  <p>
-    Organization : Authentic Technology (India) Pvt. Ltd
-  </p>
-  <p>
-    Application Server : Apache tomcat
-  </p>
-  <p>
-    Duration <strong> </strong> : April 2008 to March 2009
-  </p>
-  <p>
-    Technology used <strong> : </strong>PHP, MySQL, JavaScript
-  </p>
-  <p>
-    Description<strong>: </strong>The college Management system is a Web-based
-    college management system that is intended to provide information to the
-    college authority staff and students. It has many modules like Student
-    Registration, online Examination System, Placement, Student Payment
-    Management, and Administration. This project is developed in PHP and MySQL
-    and JavaScript and have an elegant and feel.
-  </p>
-  <p>
-    <strong><u>Project #14</u></strong>
-  </p>
-  <p>
-    Project Name : Online Exchange System
-  </p>
-  <p>
-    Client : Online Classified (US)
-  </p>
-  <p>
-    Organization : Assurgent Technology Sol. Pvt. Ltd.
-  </p>
-  <p>
-    Application Server : Apache Web Server
-  </p>
-  <p>
-    Duration : January 2008 to April 2008
-  </p>
-  <p>
-    Technology used :<strong> </strong>PHP, AJAX, MySQL, in XAMPP server
-  </p>
-  <p>
-    Description<strong>: </strong>The Online Exchange system is a Web-based
-    online Marketing system that is intended to provide marketing solution for
-    almost all type of Markets (real-estate, jobs, community, etc.). It has an
-    Admin control panel where Admin can handle the system to change look and
-    feel and other administrative works. It is developed using PHP, MySQL,
-    JavaScript and AJAX.<strong><u></u></strong>
-  </p>
-  <p>
-    <strong><u></u></strong>
-  </p>
-  <p>
-    <strong><u>Project #15</u></strong>
-  </p>
-  <p>
-    Project Name : Flour Mill Management System (FloutTech).
-  </p>
-  <p>
-    Client : Sri Durga Food Production Pvt. Ltd.
-  </p>
-  <p>
-    Organization : Assurgent Technology sol. Pvt. Ltd.
-  </p>
-  <p>
-    Duration : September 2007 to January 2008
-  </p>
-  <p>
-    Team Size : 4
-  </p>
-  <p>
-    Software : PHP and MySQL.
-  </p>
-  <p>
-    Server : Apache Server (XAMPP)
-  </p>
-  <p>
-    Description: FloutTech is an integrated solution and multi-user
-    application. It has module for many types of users. It has facility like
-    tracking pre sales, maintaining leads, customer management, product
-    management. It has facility to generate different level of report in few
-    clicks to enable management to take decision, monitoring customer
-    activities, and regulate production and distribution of Wheat Products. <strong><u></u></strong>
-  </p>
-  <p>
-    <strong><u></u></strong>
-  </p>
-  <p>
-    <strong><u>Project #16</u></strong>
-  </p>
-  <p>
-    Project Name : Horse Racing
-  </p>
-  <p>
-    Organization : Assurgent Technology Sol. Pvt. Ltd.
-  </p>
-  <p>
-    Application Server : Apache Web Server
-  </p>
-  <p>
-    Duration : June 2007 to September 2007
-  </p>
-  <p>
-    Technology used :<strong> </strong>PHP, MySQL, in Apache Server (XAMPP)
-  </p>
-  <p>
-    Description<strong>: </strong>This CMS project is developed for
-    establishing the costumer relationship, user management and the day to day
-    operation of a horse racing company. It provides information about average
-    winning chances of any contestants and other racing related information. It
-    has many modules like online payment system, new user registration,
-    handling basic design of the site dynamically, profile management and many
-    more. This project is developed in core PHP, MySQL, JavaScript and AJAX. It
-    has elegant looks which attracts online users to register and take part in
-    horse racing event.<strong><u></u></strong>
-  </p>
-  <p>
-    <strong><u></u></strong>
-  </p>
+
+  <ani-projects></ani-projects>
+
+
   <div>
     <p>
       <strong>Honors &amp; Awards </strong>
