- Move smallers pices to components

--- a/source/src/app/aniruddh/components/home/home.component.html
+++ b/source/src/app/aniruddh/components/home/home.component.html
@@ -2,307 +2,10 @@
   <div class="summary">
     <ani-summary></ani-summary>
   </div>
-
-  <div>
-    <p>
-      <strong>WORK EXPERIENCE</strong>
-    </p>
-  </div>
-  <p>
-    Currently working as Senior Software Engineer/Architect with <strong>PeopleTech Group </strong>from July 2016 to
-    till
-    date.
-  </p>
-  <p>
-    - Currently working as senior developer at FINRA as a full stack developer
-    and developing HERD and shepherd using AnugularJS, Angular 4, JAVA, Spring
-    in Amazon aws cloud environment.
-  </p>
-  <p>
-    - Herd and shepherd are indexing data of all financial institutes of USA.
-    Herd is open source and available for public in Github and shepherd will
-    soon be open source after angular4 migration.
-  </p>
-  <p>
-    - Worked at <strong>Comcast</strong> in <strong>Einstein360</strong>
-    project in
-    <strong>
-      Angular2, Angularjs, JavaScript, gulp, webpack, npm, systemjs, node,
-      html5, SCSS, spring boot
-    </strong>
-    , etc.
-  </p>
-  <p>
-    - Preparing architecture for the angular2 and angularjs application to
-    consume REST web services form spring boot application which are integrated
-    as widget in einstein360 application.
-  </p>
-  <p>
-    - Preparing test frameworks implementation using Karma, Jasmine,
-    protractor, JavaScript to test many widgets under einstein360 project.
-  </p>
-  <p>
-    Worked as Senior Software Engineer with <strong>eTouch Systems Corporation </strong>from February 2016 to July
-    2016.
-  </p>
-  <p>
-    - Deployed at <strong>Intuit</strong> and working in <strong>QuickBooks</strong> project in JavaScript, React,
-    NodeJs,
-    html5,
-    scss, etc
-  </p>
-  <p>
-    - Working on the area of application development using UI/UX and JAVA.
-  </p>
-  <p>
-    - Developing and enhancing module using<strong>JAVA/J2EE, Spring MVC</strong>, <strong>HTML 5, CSS 3, jQuery 1.8,
-    AngularJS 1.4 </strong>in payment
-    module.
-  </p>
-  <p>
-    - Designing and developing a framework using cucumber (BDD), JAVA,
-    JavaScript to test many applications under various project.
-  </p>
-  <p>
-    Worked as Analyst I -Apps Prog with <strong>Bank of America </strong>from
-    November 2014 to January 2016.
-  </p>
-  <p>
-    - Working as a key resource on CashPro project by taking ownership of
-    Payment module
-  </p>
-  <p>
-    - Developing and enhancing module using<strong>JAVA 1.7, Spring MVC</strong>, <strong>HTML 5, CSS 3, jQuery 1.8,
-    AngularJS 1.4 </strong>in payment
-    module.
-  </p>
-  <p>
-    - Designing and developing a framework using cucumber (BDD), JAVA,
-    JavaScript to test all application Under CashPro in Bank of America.
-  </p>
-  <p>
-    Worked as Senior Associate –Project with<strong>Cognizant Technology Services</strong> and was deployed at <strong>Google
-    India </strong>from April 2014 to November 2014.
-  </p>
-  <p>
-    - Understanding requirement from Business team and then implementing them
-    with the best possible technology as a team.
-  </p>
-  <p>
-    - Developing web application using <strong>JAVA, Python</strong>,
-    <strong>
-      HTML 5, CSS 3, jQuery, AngularJS in Google App Engine Cloud
-    </strong>
-    for the business team to improve productivity of the team.
-  </p>
-  <p>
-    Worked as Senior Software Engineer with <strong>NCR Corporation (I) Pvt. Ltd. </strong>From December 2010 to Mar
-    2014.
-  </p>
-  <p>
-    - Preparing Design and Function specification document of projects by
-    interacting with the business team.
-  </p>
-  <p>
-    - Developing new modules and supporting them in existing Applications.
-  </p>
-  <p>
-    - Worked in technologies like JAVA, J2EE, HTML5, CSS3, JavaScript, jQuery,
-    jQuery Mobile
-  </p>
-  <p>
-    - Support application 24*7 application in the areas of UNIX, Control-M
-    automated jobs, PL/SQL, JAVA/J2EE
-  </p>
-  <p>
-    - Worked on NCR intranet portal using Joomla, PHP, MySQL, jQuery, HTML,
-    CSS.
-  </p>
-  <p>
-    Worked as Senior Software Engineer with <strong>smartData Enterprises India Ltd. </strong>From December 2009 to
-    September 2010.
-  </p>
-  <p>
-    - I worked in SCM and CRP project of one of the reputed client called
-    Revolution Group.
-  </p>
-  <p>
-    - Worked in various technology including JAVA/J2EE, PHP, MySQL, CakePHP,
-    Joomla, HTML, CSS, JavaScript, jQuery
-  </p>
-  <p>
-    - Worked in Fashion social Media site called Fame Addict using Joomla and
-    jQuery
-  </p>
-  <p>
-    Worked as a Senior Software Engineer with <strong>Authentic Technology (India) Pvt. Ltd., Bhubaneswar from</strong>
-    April 2008 to December 2009.
-  </p>
-  <p>
-    - Worked in various internal and external IT projects of the company.
-  </p>
-  <p>
-    - Worked on Authentic Global Account (GCA) using JAVA, J2EE, Struts1.2 and
-    JavaScript.
-  </p>
-  <p>
-    - Prepared a College management system for various engineering colleges
-    using PHP, MySQL and JavaScript.
-  </p>
-  <p>
-    Worked as a Software Engineer with<strong>Assurgent Technology Solution Pvt. Ltd.</strong>,
-    <strong>Kolkata</strong>.
-    From March 2007 up to April 2008.
-  </p>
-  <p>
-    - I joined as a trainee software engineer and got chance to learn and work
-    on various projects of the company.
-  </p>
-  <p>
-    - I developed many small websites for company’s clients using PHP, MySQL,
-    and JavaScript.
-  </p>
-  <p>
-    - Worked in Flour Mill management system using PHP, MySQL and JavaScript.
-  </p>
-  <div>
-    <p>
-      <strong>TECHNICAL SKILLS</strong>
-    </p>
-  </div>
-  <p>
-    <strong></strong>
-  </p>
-  <p>
-    Backend programming : JAVA/J2EE, PHP, spring, Spring Boot, NodeJS, etc
-  </p>
-  <p>
-    Frontend or UI Programming : TypeScript, JavaScript, HTML5, SCSS, SASS, CSS
-    3
-  </p>
-  <p>
-    JavaScript Libraries : Angular 2, Angular 1, jQuery, jQuery Mobile
-  </p>
-  <p>
-    RDBMS : Oracle 11g, PL/SQL, SQL, MySQL5.5, Google Cloud datastore.
-  </p>
-  <p>
-    Cloud platforms : Google Cloud platform, Google App Engine
-  </p>
-  <p>
-    Web Server : Tomcat, XAMPP, WebLogic, App Engine Server, lite-server, etc
-  </p>
-  <p>
-    Framework : Spring 4, Struts 1.2/2, CakePHP, Cucumber, etc
-  </p>
-  <p>
-    IDE : InteliJ, Web Storm, Eclipse, My Eclipse, SQL Navigator.
-  </p>
-  <p>
-    Source Control : Git, Google Cloud source, SVN, CVS, Perforce
-  </p>
-  <p>
-    Operating Systems : Windows, Ubuntu Linux, Mac 10x, UNIX, Solaris
-  </p>
-  <p>
-    Tools : Git, JIRA Issue Tracking Tool, BMC Remedy, HP QC, Star, etc.
-  </p>
-
+  <app-work-experience></app-work-experience>
+  <app-techinical-skills></app-techinical-skills>
   <ani-projects></ani-projects>
-
-
-  <div>
-    <p>
-      <strong>Honors &amp; Awards </strong>
-      <strong></strong>
-    </p>
-  </div>
-  <p>
-    <strong></strong>
-  </p>
-  <p>
-    <strong>
-      NN/G 2012 Intranet Design Annual Award winners (January 2012):
-    </strong>
-    <strong></strong>
-  </p>
-  <p>
-    <strong>Link: </strong>
-    <a href="http://www.nngroup.com/news/item/2012-intranet-design-awards/">
-      http://www.nngroup.com/news/item/2012-intranet-design-awards/
-    </a>
-  </p>
-  <p>
-    NCR Corporation's intranet designers used a significant reorganization as
-    an opportunity to help make information more transparent to all. Taking
-    cues from organizational restructuring, they defined one IA and search,
-    eliminating many issues from both the individual and company perspectives.
-    In this winning design, people can find their information while hitting
-    fewer pages and sites, so they can spend less time pursuing content and
-    more time consuming it.
-  </p>
-  <p>
-    The NCR intranet team: Sushil Bharwani, Naveen Verma, Abhishek Anand,
-    Prashant Yadav, Prateek Narang, <strong>Anirudha Das</strong>, Jai Prakash
-    Mishra, Rudresh Shrotriya, Abdul Momin Khan, Mohit Sharma, Kenny Monteith,
-    Myria Williams, Vic Shoup, Omar Gosh, Joshua Smith, Colleen Swanger, Stuart
-    Gray, and Angelo Kalevela.
-  </p>
-  <p>
-    <strong>Polymorphin Rangers (September 2015): </strong>
-    Recognized by Bank of America GWBT for contribution towards hack/a/thon_
-    innovation project.
-  </p>
-  <p>
-    <strong>Smile Award (October 2013): </strong>
-    Recognized by Management of NCR Corporation for contribution towards ARCS
-    Customer account alignment project.
-  </p>
-  <div>
-    <p>
-      <strong>PERSONAL DETAILS</strong>
-    </p>
-  </div>
-  <p>
-    VISA : H1-B US working visa (expires 07/2019)
-  </p>
-  <p>
-    B1/B2 US business visa
-  </p>
-  <p>
-    Date of Birth : 09 June 1985
-  </p>
-  <p>
-    Gender : Male
-  </p>
-  <p>
-    Marital Status : Married
-  </p>
-  <p>
-    Passport No : N2042274
-  </p>
-  <p>
-    Nationality : Indian
-  </p>
-  <p>
-    Present Address : 18349 Lost Knife Cir apt 201, Montgomery Village, MD
-    20886, USA (US)
-  </p>
-  <p>
-    Language : English, Hindi, Odia
-  </p>
-  <p>
-    I hereby declare that the above written particulars are to the best of my
-    knowledge &amp; belief.<strong><u></u></strong>
-  </p>
-  <p>
-    <strong><u></u></strong>
-  </p>
-  <p>
-    <strong><u></u></strong>
-  </p>
-  <p align="right">
-    <strong>Aniruddha Das</strong>
-    <a name="_PictureBullets"></a>
-  </p>
+  <ani-honors-and-awards></ani-honors-and-awards>
+  <app-personal-information></app-personal-information>
+  <app-declaration></app-declaration>
 </div>
