--- a/source/src/app/aniruddh/components/usa-state-selection/usa-state-selection.component.html
+++ b/source/src/app/aniruddh/components/usa-state-selection/usa-state-selection.component.html
@@ -1,8 +1,8 @@
 <div _ngcontent-jck-c155="" class="map-container" style="position: relative; padding-bottom: 56.25%;">
   <svg width="600" data-width="600" class="datamap" height="453"
        style="overflow: hidden; position: absolute; width: 100%; height: 100%; touch-action: none; user-select: none; -webkit-user-drag: none; -webkit-tap-highlight-color: rgba(0, 0, 0, 0);"
-       xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-       xmlns:ev="http://www.w3.org/2001/xml-events">
+       xmlns="http://www.w3.org/2000/svg"
+  >
     <g id="" class="datamaps-subunits svg-pan-zoom_viewport"
        transform="matrix(1.270442675433669,0,0,1.270442675433669,-67.63802600615463,-97.1311890482031)"
        style="transform: matrix(1.27044, 0, 0, 1.27044, -67.638, -97.1312);">
