--- a/source/src/app/aniruddh/components/work-sample/work-sample.component.html
+++ b/source/src/app/aniruddh/components/work-sample/work-sample.component.html
@@ -73,7 +73,8 @@
       <div class="row d-flex justify-content-between">
         <div class="col">
           <h6><a href="https://cashproonline.bankofamerica.com/">Bank of America CashPro</a></h6>
-          <p>Manage your cash, payments and receipts, investments, foreign exchange, credit and trade with access choices that work best for you.</p>
+          <p>Manage your cash, payments and receipts, investments, foreign exchange, credit and trade with access
+            choices that work best for you.</p>
         </div>
         <div class="col">
           <img class="finra-udc" [src]="'/assets/boa-cashproonline.png'">
@@ -105,7 +106,8 @@
       <div class="row d-flex justify-content-between">
         <div class="col">
           <h6><a href="https://intranet.ncr.com">NCR Intranet</a></h6>
-          <p>I worked on intranet portal of the company which consilodate around 200 small websites for ncr customer and vendors</p>
+          <p>I worked on intranet portal of the company which consilodate around 200 small websites for ncr customer and
+            vendors</p>
         </div>
         <div class="col">
           <img class="finra-udc" [src]="'/assets/ncr-intranet.png'">
@@ -137,7 +139,8 @@
       <div class="row d-flex justify-content-between">
         <div class="col">
           <h6>Authentic Technologies Global account</h6>
-          <p>Manage your cash, payments and receipts, investments, foreign exchange, credit and trade with access choices that work best for you.</p>
+          <p>Manage your cash, payments and receipts, investments, foreign exchange, credit and trade with access
+            choices that work best for you.</p>
         </div>
       </div>
     </div>
@@ -152,7 +155,8 @@
       <div class="row d-flex justify-content-between">
         <div class="col">
           <h6>Worked for Assurgent clients</h6>
-          <p>Manage your cash, payments and receipts, investments, foreign exchange, credit and trade with access choices that work best for you.</p>
+          <p>Manage your cash, payments and receipts, investments, foreign exchange, credit and trade with access
+            choices that work best for you.</p>
         </div>
       </div>
     </div>
