- Add alignment to inner components

--- a/source/src/app/aniruddh/components/home/home.component.html
+++ b/source/src/app/aniruddh/components/home/home.component.html
@@ -1,11 +1,35 @@
 <div class="home">
-  <div class="summary">
+
+  <div class="sections">
+    <app-profile-image></app-profile-image>
+  </div>
+
+  <div class="summary sections">
     <ani-summary></ani-summary>
   </div>
-  <app-work-experience></app-work-experience>
-  <app-techinical-skills></app-techinical-skills>
-  <ani-projects></ani-projects>
-  <ani-honors-and-awards></ani-honors-and-awards>
-  <app-personal-information></app-personal-information>
-  <app-declaration></app-declaration>
+
+  <div class="sections">
+    <ani-work-experience></ani-work-experience>
+  </div>
+
+  <div class="sections">
+    <ani-techinical-skills></ani-techinical-skills>
+  </div>
+
+  <div class="sections">
+    <ani-projects></ani-projects>
+  </div>
+
+  <div class="sections">
+    <ani-honors-and-awards></ani-honors-and-awards>
+  </div>
+
+  <div class="sections">
+    <ani-personal-information></ani-personal-information>
+  </div>
+
+  <div class="sections">
+    <ani-declaration></ani-declaration>
+  </div>
+
 </div>
