--- a/source/src/app/aniruddh/components/summary/summary.component.html
+++ b/source/src/app/aniruddh/components/summary/summary.component.html
@@ -1,21 +1,25 @@
-<app-profile-image></app-profile-image>
+<div class="title">
+  <div>
+    <h2>Aniruddha Das</h2>
+  </div>
+  <p>
+    A self-motivated full-stack, multi-domain, responsible and
+    solutions-orientated
+    <strong>
+      JavaScript, TypeScript, ES6, Angular (current 13+), React, Vue, AngularJS, NodeJs, jQuery,
+      HTML, CSS,
+    </strong>
+    <strong>
+      NODEJS, JAVA, J2EE, Spring, PHP, Shell Script, PL SQL, MySQL, Google App
+      Engine, Google Data store, JPA, Cucumber BDD, Karma, Jasmine,
+      Protractor
+    </strong>
+    Professional with more then <strong>13+ Years of IT experience</strong> in
+    a various IT stages including Architect, Design, Management, development, Unit testing and
+    enhancement and etc.
+  </p>
 
-<p>
-  A self-motivated full-stack, multi-domain, responsible and
-  solutions-orientated
-  <strong>
-    JavaScript, TypeScript, ES6, Angular2/4, AngularJS, NodeJs, jQuery,
-    HTML, CSS,
-  </strong>
-  <strong>
-    JAVA, J2EE, Spring, PHP, Shell Script, PL SQL, MySQL, Google App
-    Engine, Google Data store, JPA, Cucumber BDD, Karma, Jasmine,
-    Protractor
-  </strong>
-  Professional with more then <strong>10+ Years of IT experience</strong> in
-  a various IT stages including Design, developing, Unit testing and
-  enhancement and support application.
-</p>
+</div>
 
 
 
