- Align declaration  - Change backend looks

--- a/source/src/app/aniruddh/components/declaration/declaration.component.html
+++ b/source/src/app/aniruddh/components/declaration/declaration.component.html
@@ -1,4 +1,8 @@
 <p>
+  <strong>Declaration</strong>
+</p>
+
+<p>
   I hereby declare that the above written particulars are to the best of my
   knowledge &amp; belief.<strong><u></u></strong>
 </p>
