--- a/source/src/app/aniruddh/components/summary/summary.component.html
+++ b/source/src/app/aniruddh/components/summary/summary.component.html
@@ -100,7 +100,7 @@
 
 
 <p>
-  <strong>BACKEND (Node/Java/PHP/Python):</strong>
+  <strong>Backend (Node/Java/PHP/Python):</strong>
 </p>
 <ul>
   <li>
