- Fix work experience component and make data dynamic  - add social link and icon like linkedin, stackoverflow, github

--- a/source/src/app/aniruddh/components/summary/summary.component.scss
+++ b/source/src/app/aniruddh/components/summary/summary.component.scss
@@ -1,9 +1,32 @@
-.title {
+.page {
   margin-bottom: 15px;
+  .title {
+    margin-bottom: 12px;
+    .social {
+      text-align: right;
+      span {
+        margin: 2px 10px;
+        a {
+          .linkedin {
+            color: #0a53be;
+          }
+          .github {
+            color: #000000;
+          }
+          .stackoverflow {
+            color: #d28d18;
+          }
+          .print {
+            color: #000000;
+          }
+        }
+      }
+    }
+  };
 }
 
 @media print {
   .title {
-    margin-top: 200px
+    margin-top: 170px
   }
 }
