--- a/source/src/app/aniruddh/components/work-experience/work-experience.component.html
+++ b/source/src/app/aniruddh/components/work-experience/work-experience.component.html
@@ -1,163 +1,17 @@
-<div>
-  <strong>WORK EXPERIENCE</strong>
+<div class="main-page">
+  <div>
+    <strong>Work Experience</strong>
+  </div>
+
+  <div class="companies">
+    <div class="company" *ngFor="let workExperience of workExperiences">
+      <h6>{{workExperience.company}}</h6>
+      <ul class="detail">
+        <li *ngFor="let exp of workExperience.experience">
+          {{exp}}
+        </li>
+      </ul>
+    </div>
+
+  </div>
 </div>
-
-<ul>
-  <li>
-    Currently working as Senior Software Engineer/Architect with <strong>PeopleTech Group </strong>from July 2016 to
-    till date.
-  </li>
-  <li>
-    Currently working as senior developer at FINRA as a full stack developer
-    and developing HERD and shepherd using AnugularJS, Angular 4, JAVA, Spring
-    in Amazon aws cloud environment.
-  </li>
-  <li>
-    Herd and shepherd are indexing data of all financial institutes of USA.
-    Herd is open source and available for public in Github and shepherd will
-    soon be open source after angular4 migration.
-  </li>
-  <li>
-    Worked at <strong>Comcast</strong> in <strong>Einstein360</strong>
-    project in
-    <strong>
-      Angular2, Angularjs, JavaScript, gulp, webpack, npm, systemjs, node,
-      html5, SCSS, spring boot
-    </strong>
-    , etc.
-  </li>
-  <li>
-    Preparing architecture for the angular2 and angularjs application to
-    consume REST web services form spring boot application which are integrated
-    as widget in einstein360 application.
-  </li>
-  <li>
-    Preparing test frameworks implementation using Karma, Jasmine,
-    protractor, JavaScript to test many widgets under einstein360 project.
-  </li>
-  <li>
-    Worked as Senior Software Engineer with <strong>eTouch Systems Corporation </strong>from February 2016 to July
-    2016.
-  </li>
-  <li>
-    Deployed at <strong>Intuit</strong> and working in <strong>QuickBooks</strong> project in JavaScript, React,
-    NodeJs,
-    html5,
-    scss, etc
-  </li>
-  <li>
-    Working on the area of application development using UI/UX and JAVA.
-  </li>
-  <li>
-    Developing and enhancing module using<strong>JAVA/J2EE, Spring MVC</strong>, <strong>HTML 5, CSS 3, jQuery 1.8,
-    AngularJS 1.4 </strong>in payment
-    module.
-  </li>
-  <li>
-    Designing and developing a framework using cucumber (BDD), JAVA,
-    JavaScript to test many applications under various project.
-  </li>
-  <li>
-    Worked as Analyst I -Apps Prog with <strong>Bank of America </strong>from
-    November 2014 to January 2016.
-  </li>
-  <li>
-    Working as a key resource on CashPro project by taking ownership of
-    Payment module
-  </li>
-  <li>
-    Developing and enhancing module using<strong>JAVA 1.7, Spring MVC</strong>, <strong>HTML 5, CSS 3, jQuery 1.8,
-    AngularJS 1.4 </strong>in payment
-    module.
-  </li>
-  <li>
-    Designing and developing a framework using cucumber (BDD), JAVA,
-    JavaScript to test all application Under CashPro in Bank of America.
-  </li>
-  <li>
-    Worked as Senior Associate –Project with<strong>Cognizant Technology Services</strong> and was deployed at <strong>Google
-    India </strong>from April 2014 to November 2014.
-  </li>
-  <li>
-    Understanding requirement from Business team and then implementing them
-    with the best possible technology as a team.
-  </li>
-  <li>
-    Developing web application using <strong>JAVA, Python</strong>,
-    <strong>
-      HTML 5, CSS 3, jQuery, AngularJS in Google App Engine Cloud
-    </strong>
-    for the business team to improve productivity of the team.
-  </li>
-  <li>
-    Worked as Senior Software Engineer with <strong>NCR Corporation (I) Pvt. Ltd. </strong>From December 2010 to Mar
-    2014.
-  </li>
-  <li>
-    Preparing Design and Function specification document of projects by
-    interacting with the business team.
-  </li>
-  <li>
-    Developing new modules and supporting them in existing Applications.
-  </li>
-  <li>
-    Worked in technologies like JAVA, J2EE, HTML5, CSS3, JavaScript, jQuery,
-    jQuery Mobile
-  </li>
-  <li>
-    Support application 24*7 application in the areas of UNIX, Control-M
-    automated jobs, PL/SQL, JAVA/J2EE
-  </li>
-  <li>
-    Worked on NCR intranet portal using Joomla, PHP, MySQL, jQuery, HTML,
-    CSS.
-  </li>
-  <li>
-    Worked as Senior Software Engineer with <strong>smartData Enterprises India Ltd. </strong>From December 2009 to
-    September 2010.
-  </li>
-  <li>
-    I worked in SCM and CRP project of one of the reputed client called
-    Revolution Group.
-  </li>
-  <li>
-    Worked in various technology including JAVA/J2EE, PHP, MySQL, CakePHP,
-    Joomla, HTML, CSS, JavaScript, jQuery
-  </li>
-  <li>
-    Worked in Fashion social Media site called Fame Addict using Joomla and
-    jQuery
-  </li>
-  <li>
-    Worked as a Senior Software Engineer with <strong>Authentic Technology (India) Pvt. Ltd., Bhubaneswar from</strong>
-    April 2008 to December 2009.
-  </li>
-  <li>
-    Worked in various internal and external IT projects of the company.
-  </li>
-  <li>
-    Worked on Authentic Global Account (GCA) using JAVA, J2EE, Struts1.2 and
-    JavaScript.
-  </li>
-  <li>
-    Prepared a College management system for various engineering colleges
-    using PHP, MySQL and JavaScript.
-  </li>
-  <li>
-    Worked as a Software Engineer with<strong>Assurgent Technology Solution Pvt. Ltd.</strong>,
-    <strong>Kolkata</strong>.
-    From March 2007 up to April 2008.
-  </li>
-  <li>
-    I joined as a trainee software engineer and got chance to learn and work
-    on various projects of the company.
-  </li>
-  <li>
-    I developed many small websites for company’s clients using PHP, MySQL,
-    and JavaScript.
-  </li>
-  <li>
-    Worked in Flour Mill management system using PHP, MySQL and JavaScript.
-  </li>
-
-</ul>
