- Fix techinical bold to normal  - Improve project section  - Fix printed page, the print button is not visible

--- a/source/src/app/aniruddh/components/honors-and-awards/honors-and-awards.component.html
+++ b/source/src/app/aniruddh/components/honors-and-awards/honors-and-awards.component.html
@@ -14,7 +14,7 @@
         <cfs-read-more
           [text]="award.description"
           [maxLength]="300"
-          [linkLabel]="'...read more'"
+          [showLinkLabel]="'...more'"
           [hideLink]="false">
         </cfs-read-more>
       </div>
