--- a/source/src/app/aniruddh/components/techinical-skills/techinical-skills.component.html
+++ b/source/src/app/aniruddh/components/techinical-skills/techinical-skills.component.html
@@ -1,6 +1,6 @@
 <div class="main-page">
   <p>
-    <strong>TECHNICAL SKILLS</strong>
+    <strong>Techinical Skills</strong>
   </p>
 
   <div class="skills">
