- Clean up data and update experience, highlight, summary

--- a/source/src/app/aniruddh/components/home/home.component.html
+++ b/source/src/app/aniruddh/components/home/home.component.html
@@ -3,6 +3,9 @@
   <div class="sections">
     <app-profile-image></app-profile-image>
   </div>
+  <div class="social-links">
+    <app-social-links></app-social-links>
+  </div>
 
   <div class="summary sections">
     <ani-summary></ani-summary>
