--- a/source/src/app/aniruddh/components/home/home.component.scss
+++ b/source/src/app/aniruddh/components/home/home.component.scss
@@ -2,7 +2,10 @@
   .sections {
     margin-top: 10px;
   }
+  .social-links {
+    margin-top: 30px;
+  }
   .summary {
-    margin-top: 70px;
+    margin-top: 30px;
   }
 }
