--- a/source/src/app/aniruddh/components/summary/summary.component.html
+++ b/source/src/app/aniruddh/components/summary/summary.component.html
@@ -1,259 +1,189 @@
-<div class="page">
-  <div class="title">
-    <div class="social">
-      <span>
-        <a target="_blank" href="https://www.linkedin.com/in/aniruddhadas9/">
-          <fa-icon class="linkedin" [icon]="faLinkedin" [size]="'3x'"></fa-icon>
-        </a>
-      </span>
-      <span>
-        <a target="_blank" href="https://github.com/aniruddhadas9">
-          <fa-icon class="github" [icon]="faGithub" [size]="'3x'"></fa-icon>
-        </a>
-      </span>
-      <span>
-        <a target="_blank" href="https://stackoverflow.com/users/537647/aniruddha-das">
-          <fa-icon class="stackoverflow" [icon]="faStackOverflow" [size]="'3x'"></fa-icon>
-        </a>
-      </span>
-      <span>
-        <a href="javascript: void(0)" onclick="window.print();">
-          <fa-icon class="print" [icon]="faPrint" [size]="'3x'"></fa-icon>
-        </a>
-      </span>
-    </div>
+<div class="summary">
+
+
+  <div class="name">
     <h2>Aniruddha Das</h2>
     <!--<strong>13+ Years of IT experience</strong>-->
+
+    <p>
+      A self-motivated Frontend (UI), full-stack, multi-domain, responsible and
+      solutions-orientated
+      <strong>
+        JavaScript, TypeScript, ES6, Angular (current 13+), React, Vue, AngularJS, NodeJs, jQuery,
+        HTML, CSS, JAVA, J2EE, Spring Boot, PHP, MySQL, Google App Engine, Google Data store, JPA, Cucumber BDD, Karma,
+        Jasmine, Protractor
+      </strong>
+      Professional with more then <strong>13+ Years of IT experience</strong> in
+      a various IT stages including Architect, Design, Management, development, Unit testing and
+      enhancement.
+    </p>
   </div>
+
+
   <p>
-    A self-motivated full-stack, multi-domain, responsible and
-    solutions-orientated
-    <strong>
-      JavaScript, TypeScript, ES6, Angular (current 13+), React, Vue, AngularJS, NodeJs, jQuery,
-      HTML, CSS,
-    </strong>
-    <strong>
-      NODEJS, JAVA, J2EE, Spring, PHP, Shell Script, PL SQL, MySQL, Google App
-      Engine, Google Data store, JPA, Cucumber BDD, Karma, Jasmine,
-      Protractor
-    </strong>
-    Professional with more then <strong>13+ Years of IT experience</strong> in
-    a various IT stages including Architect, Design, Management, development, Unit testing and
-    enhancement and etc.
+    <strong>Architecture and Design:</strong>
   </p>
+  <ul>
+    <li>
+      Extensive experience in design and develop of modern age web (UI) applications using frameworks like <strong>Angular,
+      React</strong>.
+    </li>
+    <li>
+      Design and develop of modern SAS based application to be served in subscription model.
+    </li>
+    <li>
+      Good Experience in analyzing business requirement and writing Functional specification and design for the IT
+      development.
+    </li>
+    <li>
+      Architectural experience of designing test framework for the developer and testers using <strong>Protractor,
+      Karma,
+      Jasmine</strong>
+      and configuring them with <strong>Gulp, Grunt, npm, etc. </strong>
+    </li>
+    <li>
+      Good experience setting up CI/CD to automate build and deployment like <strong>Jenkins, GoCD, Circle CI,
+      etc</strong>.
+    </li>
+    <li>
+      Design and develop of modern application to consume REST API (web services)
+    </li>
+    <li>
+      Good experience in designing Behavior Driven Development (BDD) model and Test Driven Development (TDD).
+    </li>
+    <li>
+      Good experience of code review, Pair programming, Mentoring, etc
+    </li>
+  </ul>
+
+
+  <p>
+    <strong>Frontend (UI/UX):</strong>
+  </p>
+  <ul>
+    <li>
+      Strong Implementation knowledge of <strong>Angular, React</strong>
+    </li>
+    <li>
+      Strong development experience in <strong>Typescript</strong> and <strong>ES6</strong> development along with
+      module
+      implementation like <strong>CommonJS, AMD, RequireJS, UMD, SystemJS, ES6</strong>.
+    </li>
+    <li>
+      Good implementation knowledge of Core <strong>Object Oriented JavaScript, TypeScript, ES6, etc.</strong>
+    </li>
+    <li>
+      Good Experience in many 3rd party library like D3, Chart.js, etc.
+    </li>
+    <li>
+      <strong>Strong in HTML5, CSS3, TypeScript, JavaScript, jQuery, jQuery Mobile.</strong>
+    </li>
+    <li>
+      Good experience using <strong>SCSS/SASS</strong> preprocessor of CSS
+      and use of SCSS technologies like <strong>Mixins, Media query, nesting variable.</strong>
+    </li>
+    <li>
+      Good experience in securing front end applications using various
+      technologies to prevent <strong>XSRF, CSRF</strong> kind of attacks
+    </li>
+  </ul>
+
+
+  <p>
+    <strong>Backend (Node/Java/PHP/Python):</strong>
+  </p>
+  <ul>
+    <li>
+      Good knowledge of designing and developing Enterprise Application using NodeJS, spring boot, etc.
+    </li>
+    <li>
+      Worked in many Enterprise Application using<strong>JAVA, J2EE, Spring, Spring Boot, Spring MVC, NodeJS,
+      etc.</strong>
+    </li>
+    <li>
+      Good experience in developing PHP web application using cakePHP, joomla, etc.
+    </li>
+  </ul>
+
+
+  <p>
+    <strong>Database and NoSQL:</strong>
+  </p>
+  <ul>
+    <li>
+      Good experience in designing database in Oracle and MySQL platform.
+    </li>
+    <li>
+      Good experience in NoSQL platform like <strong>Google datastore, MongoDB, CouchBase, etc</strong>
+    </li>
+    <li>
+      Good experience in writing PL SQL (PL/SQL) and SQL in Relational database (RDBMS).
+    </li>
+  </ul>
+
+
+  <p>
+    <strong>Cloud and SAS:</strong>
+  </p>
+  <ul>
+    <li>
+      Good experience in developing application cloud infrastructure like <strong>Google App Engine, AWS</strong>.
+    </li>
+    <li>
+      Experence in developing <strong>SAS based application</strong> in Cloud platform like GCP, AWS
+    </li>
+    <li>
+      Good experience in google Cloud data store, Big table and Integrating many google API like map, youtube, cloud
+      deploy, etc
+    </li>
+  </ul>
+
+  <p>
+    <strong>Management and Processes: </strong>
+  </p>
+  <ul>
+    <li>
+      Good Leadership and team managing skills.
+    </li>
+    <li>
+      Good development experience is <strong>Agile</strong> methodology and agile process.
+    </li>
+    <li>
+      Good team player and also individual contributor by taking ownership of application and also experiences of
+      mentoring intern and juniors.
+    </li>
+    <li>
+      Good knowledge of integrating many 3<sup>rd</sup> party software tools and various API.
+    </li>
+  </ul>
+
+  <p>
+    <strong>Domain and Functional:</strong>
+  </p>
+  <ul>
+    <li>
+      Has good domain knowledge in developing Enterprise application in domains like <strong>FinTech, HRMS, SCM, CRM,
+      Real-estate, admin portal, Insurance, Technology, etc.</strong>
+    </li>
+    <li>
+      Good knowledge of integrating many 3<sup>rd</sup> party software tools and various API.
+    </li>
+  </ul>
+
+
+  <p>
+    <strong>Testing Frameworks:</strong>
+  </p>
+  <ul>
+    <li>
+      Good experience in unit testing and behavior testing using framework like<strong>protractor, Jasmine,
+      Karma,</strong> <strong>cucumber, web-driver, etc.</strong>
+    </li>
+    <li>
+      Good experience of <strong>Test Driven development (TDD)</strong> and <strong>Behavior driven development
+      (BDD)</strong>
+      using Cucumber and many more frameworks.
+    </li>
+  </ul>
 
 </div>
-
-
-
-<p>
-  <strong>Architecture and Design:</strong>
-</p>
-<ul>
-  <li>
-    Extensive experience in design and develop of modern age web application
-    where web services exposed using REST (JAVA, PHP, <strong>Spring Boot</strong>, Node, etc.) and consumed from
-    front-end MVC
-    like <strong>Angular 2/4 or AngularJS 1.x</strong>.
-  </li>
-  <li>
-    Good Experience in analyzing business requirement and writing Functional
-    specification and design for the IT development.
-  </li>
-  <li>
-    Good Experience in design and develop angular2 and angularjs application
-    in any environment.
-  </li>
-  <li>
-    Architectural experience of designing test framework for the developer
-    and testers using <strong>Protractor, Karma, Jasmine</strong> and
-    configuring them with <strong>Gulp, Grunt, npm, etc. </strong>
-  </li>
-  <li>
-    Good experience of configuring <strong>build tool</strong> like <strong>Jenkins or GoCD</strong>.
-  </li>
-  <li>
-    Good experience in designing Behavior Driven Development (BDD) model and
-    developing application using <strong>Cucumber BDD framework</strong>, java
-    and JavaScript.
-  </li>
-</ul>
-
-
-<p>
-  <strong>Frontend(UI/UX):</strong>
-</p>
-<ul>
-  <li align="left">
-    Strong Implementation knowledge of <strong>Angular, React, Vue</strong>
-  </li>
-  <li align="left">
-    Strong development experience in <strong>Typescript</strong> and <strong>ES6</strong> development along with module
-    implementation like <strong>CommonJS, AMD, RequireJS, UMD, SystemJS, ES6</strong>.
-  </li>
-  <li align="left">
-    Good implementing knowledge of Core <strong>Object Oriented JavaScript</strong> and JavaScript library like <strong>Angular2,
-    AngularJS, jQuery, ES6</strong> and other JavaScript
-    Library.
-  </li>
-  <li>
-    <strong>HTML5, CSS3, JavaScript, jQuery, jQuery Mobile.</strong>
-  </li>
-  <li>
-    Good work Experience in writing <strong>MVC frontend web application</strong> using AngularJS,
-    Bootstrap and related JavaScript, HTML 5 and CSS 3 plugins.
-  </li>
-  <li>
-    Good experience using <strong>SCSS/SASS</strong> preprocessor of CSS
-    and use of SCSS technologies like <strong>Mixins, Media query, nesting variable.</strong>
-  </li>
-  <li>
-    Good experience of using tools like
-    <strong>Gulp, grunt, npm, Webpack, SystemJS, node, karma, jasmine, protactor</strong>
-    to develop front end applications.
-  </li>
-  <li>
-    Good Experience implementing jQuery plugins like <strong>Select2</strong> and <strong>jQuery Data Table</strong>.
-  </li>
-  <li>
-    Good experience in securing front end applications using various
-    technologies to prevent <strong>XSRF, CSRF</strong> kind of attacks
-  </li>
-</ul>
-
-
-<p>
-  <strong>Backend (Node/Java/PHP/Python):</strong>
-</p>
-<ul>
-  <li>
-    Good knowledge of designing and developing Enterprise Application using
-    JAVA, J2EE, spring, Struts, etc.
-  </li>
-  <li>
-    Worked in many Enterprise Application using
-    <strong>JAVA, J2EE, Spring, Spring Boot, Spring MVC, Struts, etc.</strong>
-  </li>
-  <li align="left">
-    Good working experience in MVC frameworks like <strong> Spring MVC, Struts, cakePHP.</strong>
-  </li>
-  <li align="left">
-    Good experience in developing web application using PHP, cakePHP, joomla, etc.
-  </li>
-  <li align="left">
-    Designed and developed many applications for producing and consuming web
-    services using <strong>REST, SOAP</strong> based technology like Spring 4, Axis 2, etc.
-  </li>
-</ul>
-
-
-<p>
-  <strong>Database and NoSQL:</strong>
-</p>
-<ul>
-  <li>
-    Good experience in developing application on<strong>SAS platform</strong> and cloud infrastructure like <strong>Google App Engine</strong>
-  </li>
-  <li>
-    Good experience in designing database in Oracle and MySQL platform. Also
-    have good working knowledge of NoSQL platform like <strong>Google datastore and JPA</strong>
-  </li>
-  <li>
-    Worked and have deep implementation knowledge of <strong>ORACLE 11g (SQL &amp; PL/ SQL)</strong>
-  </li>
-</ul>
-
-
-<p>
-  <strong>Cloud and SAS:</strong>
-</p>
-<ul>
-  <li>
-    Good experience in developing application on<strong>SAS platform</strong> and cloud infrastructure like <strong>Google
-    App Engine</strong>.
-  </li>
-  <li>
-    Developed web application using Spring in google App Engine
-  </li>
-  <li>
-    Good experience in google Cloud data store, Big table and Integrated many
-    google API
-  </li>
-</ul>
-
-
-<p>
-  <strong></strong>
-</p>
-<p>
-  <strong>Management and Processes: </strong>
-</p>
-<ul>
-  <li>
-    Good development experience is <strong>agile</strong> methodology and
-    agile process.
-  </li>
-  <li>
-    Good Leadership and team managing skills.
-  </li>
-  <li>
-    Good team player and also individual contributor by taking ownership of
-    application and also experiences of mentoring intern and juniors.
-  </li>
-  <li>
-    Good knowledge of integrating many 3<sup>rd</sup> party software tools
-    and various API.
-  </li>
-</ul>
-
-
-<p>
-  <strong>Domain and Functional:</strong>
-</p>
-<ul>
-  <li>
-    Has good domain knowledge in <strong>Intranet Portal</strong>,
-    <strong>
-      HRMS, SCM, CRM, Real-estate, Customer support application, Account software, etc.
-    </strong>
-  </li>
-  <li>
-    Good experience in developing Enterprise application.
-  </li>
-  <li>
-    Developed application in supply chain management (SCM), Customer
-    Relationship Management (CRM), Retail, Social Communication, etc. domains.
-  </li>
-  <li>
-    Good knowledge of integrating many 3<sup>rd</sup> party software tools
-    and various API.
-  </li>
-
-</ul>
-
-
-<p>
-  <strong>Testing Frameworks:</strong>
-</p>
-<ul>
-  <li>
-    Good experience in unit testing and behavior testing using framework like<strong>protractor, Jasmine,
-    Karma,</strong> <strong>cucumber, web-driver, etc.</strong>
-  </li>
-  <li>
-    Good experience of <strong>Test Driven development (TDD)</strong> and <strong>Behavior driven development (BDD)</strong>
-    using Cucumber and many more frameworks.
-  </li>
-</ul>
-
-<p>
-  <strong>Others:</strong>
-</p>
-<ul>
-  <li align="left">
-    Good experience Application deployment and management using <strong>Jenkins, GoCD.</strong>
-  </li>
-  <li align="left">
-    Have good experience of code review using various tools like <strong>Git pool request, Crucible</strong>, Google code review tool, etc.
-  </li>
-</ul>
